fixed the tables by making code not break word, but wrap, which seems to make everything much better

--- a/frontend/scss/components/atoms/_text.scss
+++ b/frontend/scss/components/atoms/_text.scss
@@ -81,7 +81,7 @@ TODO: mono (inline, block)
 	padding: 2px 4px;
 	font-weight: bold;
 	font-family: 'Inconsolata', monospace;
-	word-break: break-word;
+	word-break: normal;
 	color: color('black');
 	background-color: #eee;
 }
